# eshu-shapeshifter

./: .gitignore  Cargo.toml  DONATE_BUTTON.md  ERROR_MESSAGE_EXPLAINED.md  FIXES_APPLIED.md  FIXES_COMPLETE.md  FIXES_SUMMARY.txt  FRAGILITY_FIXES_SUMMARY.md  GUMROAD_PRODUCT.md  LICENSE  PKGBUILD  PKGBUILD-git  QUICKSTART.md  QUICK_FIX_SUMMARY.md  README.md  README_FIXES.md  TESTING_GUIDE.md  demo-script.sh
docs/: ARCHITECTURE.md  EXAMPLES.md  FAQ.md  NEW_DISTROS.md
profiles/: arch.toml  garuda-dragonized.toml  hyprland.toml  kali.toml  nixos.toml  pop-cosmic.toml
scripts/: install.sh
src/: cli.rs  config.rs  distro.rs  error.rs  license.rs  main.rs  migration.rs  package.rs  repository.rs  scanner.rs  snapshot.rs  translation.rs
