[package]
name = "eshu-shapeshifter"
version = "0.1.0"
edition = "2021"
authors = ["Eshu Team <team@eshu-apps.com>"]
description = "Transform your Linux distro without reinstalling - migrate between distributions seamlessly"
license = "MIT"
repository = "https://github.com/eshu-apps/eshu-shapeshifter"
readme = "README.md"
keywords = ["linux", "distribution", "migration", "distro", "system"]
categories = ["command-line-utilities"]

[dependencies]
# CLI and UI
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System interaction
nix = { version = "0.27", features = ["fs", "mount", "process"] }
libc = "0.2"

# File operations
walkdir = "2.4"
glob = "0.3"
sha2 = "0.10"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
flate2 = "1.0"
tar = "0.4"

# Database for package mappings
rusqlite = { version = "0.30", features = ["bundled"] }

# Regex
regex = "1.10"

# Date/time
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
